# PhoneInfo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/luoye/phoneinfo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpu/: CpuJniBridge.c
app/src/main/java/com/luoye/phoneinfo/: MainActivity.java
app/src/main/java/com/luoye/phoneinfo/activity/: GLActivity.java  GpsActivity.java  InfoActivity.java
app/src/main/java/com/luoye/phoneinfo/adaper/: InfoListAdapter.java
app/src/main/java/com/luoye/phoneinfo/bean/: InfoItem.java
app/src/main/java/com/luoye/phoneinfo/cpu/: CpuBridge.java
app/src/main/java/com/luoye/phoneinfo/gl/: GLSurfaceViewDemo.java  OpenGLRenderer.java
app/src/main/java/com/luoye/phoneinfo/util/: IOUtils.java  InfoUtils.java  Utils.java
app/src/main/res/layout/: activity_info.xml  activity_main.xml  export_dialog.xml  gps_layout.xml  info_list_item.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/luoye/phoneinfo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
